--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,124 +1,108 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+:root {
+    --primary-clr: hsl(46, 93.3, 58.8);
+    --alt-clr: hsl(0, 0, 16);
+    --primary-font: cubano-sharp, sans-serif;
+    --alt-font: gin, serif;
+    --title-font: cubano, sans-serif;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-
 
 * {
     box-sizing: border-box;
 }
 
+html {
+    justify-content: center;
+    position: relative;
+}
+
 .hero {
     background-color: gray;
-    width: 100%;
-    padding: 0 2em 6rem;
-    font-family: gin, serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 2vmin;
-    color: rgb(248, 202, 52);
+    display: flex;
+    justify-content: center;
+    /* width: 100%; */
+    padding-bottom: clamp(2rem, 10vw, 8rem);
+    /* font-family: gin, serif; */
+    /* font-weight: 400; */
+    /* font-style: normal; */
+    /* font-size: 2vmin; */
+    /* color: rgb(248, 202, 52); */
     text-align: center;
-    display: grid;
-    place-content: center;
-    text-align: center;
-    margin: auto;
+    /* display: grid; */
+    /* place-content: center; */
+    /* text-align: center; */
+    /* margin: auto; */
     z-index: 1;
 }
 
-p {
-    color: rgb(36, 36, 36);
-}
-
 .logo {
-    /*background: pink;*/
+    display: inline-block;
     margin: 2rem auto .5em;
-    size: 6vmin;
+    width: clamp(12rem, 40vw, 25rem);
+    height: clamp(12rem, 40vw, 25rem);
 }
 
-.title {
-    /*background: lightblue;*/
-    font-family: cubano, sans-serif;
+.form-container {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    z-index: 2;
+}
+
+.form-container .title {
+    font-family: var(--title-font);
+    font-size: clamp(1.9rem, 7vw, 8rem);
+    z-index: 2;
+    color: var(--primary-clr);
+}
+
+.form-container p {
+    display: inline-block;
+    text-align: center;
+    color: rgb(36, 36, 36);
+    font-family: var(--alt-font);
     font-weight: 400;
-    font-size: 350%;
-    margin: auto;
+    justify-content: center;
+    z-index: 2;
 }
 
 .bg {
-    position: relative;
-    color: black;
-    z-index: -1;
+    position: absolute;
+    background-color: whitesmoke;
+    color: rgb(41, 41, 41);
+    z-index: 1;
 }
 .bg::after {
     content: '';
     position: absolute;
-    size: 24vmin;
+    size: clamp(26vmin, 50vw, 80vmin);
     top: 0;
     left: 0;
 
     border-width: 50vw;
     border-style: solid;
 
-    border-color: gray rgb(243, 243, 243) rgb(243, 243, 243) gray;
+    border-color: gray whitesmoke whitesmoke gray;
 }
 
-.body {
-    font-family: cubano-sharp, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: large;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    margin: auto;
+body {
+    background-color: whitesmoke;
 }
+
+main {
+    align-items: center;
+}
+
 .form {
     width: 60%;
-    margin: auto;
     padding: 2em 4em;
     z-index: 1;
+    background-color: transparent;
+    display: grid;
+    place-content: center;
 }
 
 .select {
-    font-family: cubano-sharp, sans-serif;
+    /* font-family: var(--primary-font); */
 }
 
 .moreInfoStyle {
