--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -67,7 +67,7 @@ meter {
     -moz-user-modify: read-write;
     -webkit-user-modify: read-write;
     overflow-wrap: break-word;
-    -webkit-line-break: after-white-space;
+    /* -webkit-line-break: after-white-space; */
 }
 
 /* apply back the draggable feature - exist only in Chromium and Safari */
