--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,128 +1,29 @@
 :root {
-    --primary-clr: hsl(46, 93.3, 58.8);
-    --alt-clr: hsl(0, 0, 16);
+    --fw-1: 300;
+    --fw-2: 400;
+    --fw-3: 700;
+    --fw-4: 900;
+
+    --fs-1: 1.125rem;
+    --fs-2: 1.25rem;
+    --fs-3: 2rem;
+    --fs-small: .75rem;
+
+    --clr-1: hsl(0, 0, 100%);
+    --clr-2: hsl(195, 74%, 39%);
+    --clr-3: hsl(202, 37%, 23%);
+    --clr-4: hsl(203, 47%, 14%);
+    --clr-5: hsl(38, 85%, 56%);
+
+    --clr-dark: rgb(0,0,0,.25);
+    --clr-body: rgb(255,255,255,.8);
+
     --primary-font: cubano-sharp, sans-serif;
     --alt-font: gin, serif;
     --title-font: cubano, sans-serif;
 }
 
-* {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
-html {
-    justify-content: center;
-    position: relative;
-}
-
-.hero {
-    background-color: gray;
-    display: flex;
-    justify-content: center;
-    /* width: 100%; */
-    padding-bottom: clamp(2rem, 10vw, 8rem);
-    /* font-family: gin, serif; */
-    /* font-weight: 400; */
-    /* font-style: normal; */
-    /* font-size: 2vmin; */
-    /* color: rgb(248, 202, 52); */
-    text-align: center;
-    /* display: grid; */
-    /* place-content: center; */
-    /* text-align: center; */
-    /* margin: auto; */
-    z-index: 1;
-}
-
-.logo {
-    display: inline-block;
-    margin: 2rem auto .5em;
-    width: clamp(12rem, 40vw, 25rem);
-    height: clamp(12rem, 40vw, 25rem);
-}
-
-.form-container {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    z-index: 2;
-}
-
-.form-container .title {
-    font-family: var(--title-font);
-    font-size: clamp(1.9rem, 7vw, 8rem);
-    z-index: 2;
-    color: var(--primary-clr);
-}
-
-.form-container p {
-    display: inline-block;
-    text-align: center;
-    color: rgb(36, 36, 36);
-    font-family: var(--alt-font);
-    font-weight: 400;
-    justify-content: center;
-    z-index: 2;
-}
-
-.bg {
-    position: absolute;
-    background-color: whitesmoke;
-    color: rgb(41, 41, 41);
-    z-index: 1;
-}
-.bg::after {
-    content: '';
-    position: absolute;
-    size: clamp(26vmin, 50vw, 80vmin);
-    top: 0;
-    left: 0;
-
-    border-width: 50vw;
-    border-style: solid;
-
-    border-color: gray whitesmoke whitesmoke gray;
-}
-
-body {
-    background-color: whitesmoke;
-}
-
-main {
-    align-items: center;
-}
-
-.form {
-    width: 60%;
-    padding: 2em 4em;
-    z-index: 1;
-    background-color: transparent;
-    display: grid;
-    place-content: center;
-}
-
-.select {
-    /* font-family: var(--primary-font); */
-}
-
-.moreInfoStyle {
-
-}
-
-.moreInfoVision {
-
-}
-
-.moreInfoVisionCont {
-
-}
-
-.termsConditions {
-
-}
-
-.vision {
-    width: 50vw;
-    height: 12vh;
-    text-align: start;
-}
